--- a/scss/Helpers/_variables.scss
+++ b/scss/Helpers/_variables.scss
@@ -5,14 +5,11 @@ $color-dark-1: #181818;
 $color-dark-2: #191919;
 
 //font size
-$fs-1: 1.8em;
+$fs-1: 1.1em;
 $fs-2: 1.1rem;
 $fs-3: 13px;
-$fs-4: 70px;
+$fs-4: 2.25rem;
 $fs-5: 1.6rem;
-$fs-6: 2.25rem;
-$fs-7: 20px;
-$fs-8: 44px;
 
 //font weight
 $fw-1: 400;
@@ -27,6 +24,8 @@ $ls-2: 0.03rem;
 $pd-1: 4em;
 $pd-2: 30px;
 $pd-3: 50px;
+$pd-4: 20px;
+
 
 //Margin
 $mg-1: 25px;
